--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,1 +1,44 @@
-<p>footer works!</p>
+<footer class="footer-section spad pb-0">
+    <div class="footer-top">
+        <div class="footer-warp">
+            <div class="row">
+                <div class="widget-item col-md-4">
+                    <h4>Contact Info</h4>
+                    <ul class="contact-list">
+                        <li>6A Nursery Hill, Number 1 <br> Hwange, ZW</li>
+                        <li>+263 772 892 710</li>
+                        <li>chimbadzwa.christopherdesmond@gmail.com</li>
+                    </ul>
+                </div>
+                <div class="widget-item col-md-4 mt-3 mt-md-0">
+                    <!-- <h4>Graphic Design</h4>
+                    <ul>
+                        <li><a href="">Applied Studies</a></li>
+                        <li><a href="">Computer Engeneering</a></li>
+                        <li><a href="">Software Engeneering</a></li>
+                        <li><a href="">Informational Engeneering</a></li>
+                        <li><a href="">System Engeneering</a></li>
+                    </ul> -->
+                </div>
+                <div class="widget-item col-md-4 mt-3 mt-md-0">
+                    <h4>Newsletter</h4>
+                    <form class="footer-newslatter">
+                        <input type="email" placeholder="E-mail">
+                        <button class="site-btn">Subscribe</button>
+                        <p>*We don’t spam</p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <div class="footer-warp">
+            <ul class="footer-menu">
+                <li><a href="#">Terms & Conditions</a></li>
+                <li><a href="#">Register</a></li>
+                <!-- <li><a href="#">Privacy</a></li> -->
+            </ul>
+            <div class="copyright"><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></div>
+        </div>
+    </div>
+</footer> 
