--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -1,1 +1,27 @@
-<p>navbar works!</p>
+<header class="header-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-3">
+                <div class="site-logo">
+                    <!-- <img src="assets/img/logo.png" alt=""> -->
+                    <label class="h3"><span class="text-white">Udemy</span><span class="text-danger">Learn</span></label> <br>
+                    <label class="text-white">Learn From the Best</label>
+                </div>
+                <div class="nav-switch">
+                    <i class="fa fa-bars"></i>
+                </div>
+            </div>
+            <div class="col-lg-9 col-md-9">
+                
+                <nav class="main-menu text-right">
+                    <ul>
+                        <li><a href="/home">Home</a></li>
+                        <li><a href="/home">Categories</a></li>
+                        <li><a href="/home">Courses</a></li>
+                        <li><a href="/home">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>
