--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 	height: 100%;
 	font-family: 'Raleway', sans-serif;
 	-webkit-font-smoothing: antialiased;
-	font-smoothing: antialiased;
+	/* font-smoothing: antialiased; */
 }
 
 h1,
