--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -15,10 +15,10 @@
                 
                 <nav class="main-menu text-right">
                     <ul>
-                        <li><a href="/home">Home</a></li>
-                        <li><a href="/home">Categories</a></li>
-                        <li><a href="/home">Courses</a></li>
-                        <li><a href="/home">Contact</a></li>
+                        <li><a href="/home#hero" class="smooth">Home</a></li>
+                        <li><a href="/home#categories">Categories</a></li>
+                        <li><a href="/home#courses" class="smooth">Courses</a></li>
+                        <li><a href="/home#footer">Contact</a></li>
                     </ul>
                 </nav>
             </div>
