--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 
 
 <!-- Hero section -->
-<section class="hero-section set-bg" data-setbg="assets/img/bg.jpg">
+<section id="hero" class="hero-section set-bg" data-setbg="assets/img/bg.jpg">
     <div class="container">
         <div class="hero-text text-white">
             <h2>Get The Best Free Online Courses</h2>
@@ -25,7 +25,7 @@
 
 
 <!-- categories section -->
-<section class="categories-section spad">
+<section id="categories" class="categories-section spad">
     <div class="container">
         <div class="section-title">
             <h2>Our Course Categories</h2>
@@ -128,7 +128,7 @@
 
 
 <!-- course section -->
-<section class="course-section spad">
+<section id="courses" class="course-section spad">
     <div class="container">
         <div class="section-title mb-0">
             <h2>Featured Courses</h2>
@@ -300,50 +300,6 @@
     </div>
 </section>
 <!-- course section end -->
-
-
-<!-- signup section -->
-<section class="signup-section spad">
-    <div class="signup-bg set-bg" data-setbg="assets/img/signup-bg.jpg"></div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="signup-warp">
-                    <div class="section-title text-white text-left">
-                        <h2>Sign up to became a teacher</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
-                    </div>
-                    <!-- signup form -->
-                    <form class="signup-form">
-                        <input type="text" placeholder="Your Name">
-                        <input type="text" placeholder="Your E-mail">
-                        <input type="text" placeholder="Your Phone">
-                        <label for="v-upload" class="file-up-btn">Upload Course</label>
-                        <input type="file" id="v-upload">
-                        <button class="site-btn">Search Couse</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- signup section end -->
-
-
-<!-- banner section -->
-<section class="banner-section spad">
-    <div class="container">
-        <div class="section-title mb-0 pb-2">
-            <h2>Join Our Community Now!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
-        </div>
-        <div class="text-center pt-5">
-            <a href="#" class="site-btn">Register Now</a>
-        </div>
-    </div>
-</section>
-<!-- banner section end -->
-
 
 <!-- footer section -->
 <udm-footer></udm-footer>
