--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer-section spad pb-0">
+<footer id="footer" class="footer-section spad pb-0">
     <div class="footer-top">
         <div class="footer-warp">
             <div class="row">
