--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -12,6 +12,7 @@
 html,
 body {
 	height: 100%;
+	scroll-behavior: smooth;
 	font-family: 'Raleway', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	/* font-smoothing: antialiased; */
