--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,20 +2,19 @@
 <udm-navbar></udm-navbar>
 <!-- Header section end -->
 
-
 <!-- Hero section -->
 <section id="hero" class="hero-section set-bg" data-setbg="assets/img/bg.jpg">
     <div class="container">
         <div class="hero-text text-white">
-            <h2>Get The Best Free Online Courses</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla <br> dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
+            <h2>Get The Best Premium Online Courses</h2>
+            <p></p>
         </div>
         <div class="row">
             <div class="col-lg-10 offset-lg-1">
                 <form class="intro-newslatter">
-                    <input type="text" placeholder="Name">
-                    <input type="text" class="last-s" placeholder="E-mail">
-                    <button class="site-btn">Sign Up Now</button>
+                    <input type="text" placeholder="Search Category">
+                    <input type="text" class="last-s" placeholder="Search Course">
+                    <button class="site-btn">Search Now</button>
                 </form>
             </div>
         </div>
@@ -23,13 +22,12 @@
 </section>
 <!-- Hero section end -->
 
-
 <!-- categories section -->
 <section id="categories" class="categories-section spad">
     <div class="container">
         <div class="section-title">
             <h2>Our Course Categories</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
+            <p>View Our List of Course Categories.</p>
         </div>
         <div class="row">
             <!-- categorie -->
@@ -65,74 +63,17 @@
                     </div>
                 </div>
             </div>
-            <!-- categorie -->
-            <div class="col-lg-4 col-md-6">
-                <div class="categorie-item">
-                    <div class="ci-thumb set-bg" data-setbg="assets/img/categories/4.jpg"></div>
-                    <div class="ci-text">
-                        <h5>Social Media</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur</p>
-                        <span>40 Courses</span>
-                    </div>
-                </div>
-            </div>
-            <!-- categorie -->
-            <div class="col-lg-4 col-md-6">
-                <div class="categorie-item">
-                    <div class="ci-thumb set-bg" data-setbg="assets/img/categories/5.jpg"></div>
-                    <div class="ci-text">
-                        <h5>Photoshop</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur</p>
-                        <span>220 Courses</span>
-                    </div>
-                </div>
-            </div>
-            <!-- categorie -->
-            <div class="col-lg-4 col-md-6">
-                <div class="categorie-item">
-                    <div class="ci-thumb set-bg" data-setbg="assets/img/categories/6.jpg"></div>
-                    <div class="ci-text">
-                        <h5>Cryptocurrencies</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur</p>
-                        <span>25 Courses</span>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </section>
 <!-- categories section end -->
-
-
-<!-- search section -->
-<section class="search-section">
-    <div class="container">
-        <div class="search-warp">
-            <div class="section-title text-white">
-                <h2>Search your course</h2>
-            </div>
-            <div class="row">
-                <div class="col-md-10 offset-md-1">
-                    <!-- search form -->
-                    <form class="course-search-form">
-                        <input type="text" placeholder="Course">
-                        <input type="text" class="last-m" placeholder="Category">
-                        <button class="site-btn">Search Couse</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- search section end -->
-
 
 <!-- course section -->
 <section id="courses" class="course-section spad">
     <div class="container">
         <div class="section-title mb-0">
             <h2>Featured Courses</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
+            <p>View our most rated best premium courses.</p>
         </div>
     </div>
     <div class="course-warp">
